[tool.poetry]
name = "sphinx-modeling"

# Don't miss updates in sphinx_modeling/setup.py, docs/conf.py and docs/changelog.rst
version = "0.1.1"

description = "Sphinx extension to enable modeling and set constraints for sphinx-needs"
authors = ["team useblocks <info@useblocks.com>"]
license = "MIT"
readme = "README.rst"
repository = "http://github.com/useblocks/sphinx-modeling"
documentation = "https://sphinx-modeling.readthedocs.io/en/latest/"
classifiers=[
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Topic :: Documentation',
        'Topic :: Utilities',
        'Framework :: Sphinx :: Extension',
    ]

packages = [
    {include = "sphinx_modeling"}
]


[tool.poetry.dependencies]
# cannot go hight for python due to pygls
# see also https://github.com/python-poetry/poetry/issues/1413#issuecomment-620785817
python = ">=3.7.2,<3.11"
docutils = ">=0.18.1"
pydantic = "^1.9.2"
sphinx = ">=5.0"
sphinx_needs = ">=1.0.1"
typing-extensions = {version = "^4.3.0", python = "~3.7"}  # needed for typing Literal

[tool.poetry.group.dev.dependencies]
pre-commit = "^2"

# test
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
pytest = "^7"
pytest-xdist="*"  # parallelisation

# mypy
docutils-stubs = "^0.0.22"
mypy = "^0.960"
types-setuptools = "^57.4.14"

# docs
sphinx = "^5"
sphinx_design = "^0.3.0"
sphinx-immaterial = "==0.7.3"
sphinxcontrib-plantuml = "^0.24"
sphinxcontrib-programoutput = "^0.17"

# formatting
black = "^22.3"
isort = "^5.7.0"
pylint = "^2.15.3"

[tool.pytest.ini_options]
asyncio_mode= "auto"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true
implicit_reexport = true
files = "sphinx_modeling"
ignore_missing_imports = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
  'sphinx_modeling.modeling.work_in_progress.all_in_one',
]
ignore_errors = true

[build-system]
requires = ["setuptools", "poetry_core>=1.0.8"]  # setuptools for deps like plantuml
build-backend = "poetry.core.masonry.api"

